--- a/docker-compose_2.yml
+++ b/docker-compose_2.yml
@@ -4,10 +4,10 @@ services:
     image: prepopulated-db-image
     restart: always
     networks:
-      - custom-network
+      - netnet
     ports:
       - "3306:3306"
 
 networks:
-  custom-network:
-    name: custom-network
+  netnet:
+    name: netnet
